xubuntu-wp/style.css
/*
 *  Theme Name: Xubuntu WordPress
 *  Theme URI: http://xubuntu.org/
 *  Description: Theme enhanced with HTML5 and CSS3.
 *  Author: Pasi Lallinaho
 *  Author URI: http://knome.fi/
 *  Version: 11.10-02
 *
 */

html {
	background: #162d50 url(images/page-background.png) 0 0 repeat-x;
}

body {
	padding: 2em 0 3em 0;

	font-size: small;
	font-family: "Ubuntu", sans-serif;
	line-height: 1.5em;

	background: transparent url(images/page-background-stripe.png) 0 0 repeat-x;
	color: #203b66;
	border-top: 4px solid #1c3966;
}

#wpcontent {
	width: 90%;
	min-width: 700px;
	max-width: 1100px;

	margin: 0 auto;

	clear: both;

	font-size: 110%;
	background: #f3f3f3 url(images/wpcontent-background.png) 0 0 repeat-x;

	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius: 5px;
}

/*  Self-clearing float
 *  (and other little tweaks)
 *
 */

.group:after {
	content: ".";
	display: block;
	height: 0;
	clear: both;
	visibility: hidden;
}

.hidden { display: none; }
.small { font-size: 85%; }
.alignleft { float: left; margin: 0 20px 20px 0; }
.alignright { float: right; margin: 0 0 20px 20px; }
.aligncenter { text-align: center; }

/*  Selection style
 *
 */

::selection {
	background-color: #2c5aa0;
	color: #fff;
}
::-moz-selection {
	background-color: #2c5aa0;
	color: #fff;
}

/*  Element styles
 *
 */

p, ol, ul, dl, blockquote, pre, table {
	margin-bottom: 1em;
	font-size: 90%;
}

a {
	text-decoration: none;
	color: #2c5aa0;
	border-bottom: 1px solid transparent;

	-webkit-transition: all 0.3s ease-in-out;
	-moz-transition: all 0.3s ease-in-out;
	-o-transition: all 0.3s ease-in-out;
	transition: all 0.3s ease-in-out;
}
	a:hover,
	a:active,
	a:focus {
		color: rgba(0,25,65,.8);
		border-bottom: 1px solid rgba(0,0,0,.3);
	}
	#xubuntu.item-home #main li a {
		font-size: 120%;
		line-height: 1.3em;
		color: #6e9bd4; /* #96add0; */
	}
	li.news a { color: #203b66 !important; }
	a.attachment { border-bottom: none; }

blockquote {
	margin-left: 20px;
	padding-left: 20px;
	border-left-color: #3369bb;
	border-left: 3px solid rgba(0,68,170,.3);
}

h1, h2, h3, h4, h5, h6 {
	font-weight: normal;
	text-align: left;
	margin: 1.3em 0 0.6em 0;
}

h1 {
	font-size: 150%;
	letter-spacing: 0.01em;
}
	h1 a {
		padding-bottom: 2px;
		border-bottom-color: #d9d9d9;
		border-bottom: 1px solid rgba(0,0,0,.15);
	}
	h1.post-title {
		margin-bottom: 0.4em;
	}

h2 {
	margin-top: 1.1em;
	margin-bottom: 0.5em;

	font-size: 210%;
	font-weight: normal;
	line-height: 1.15em;

	color: #2c5aa0;
}
	#sidebar h2 { font-size: 150%; }

h3 {
	font-size: 150%;
	color: #6a6a6a;
}
	#comments h3 { margin: 0 0 1em 0; }
	.picslide h3 { margin: 0; }

h4 {
	font-size: 110%;
	font-weight: lighter;
	color: #999;
	color: rgba(0,0,0,.4);
}

hr {
	margin: 1em 0;
	border-bottom: 1px solid #dadada;
}

li { list-style-position: inside; }
	#xubuntu.item-home li { list-style-type: none; }
	#latest-news li { font-size: 120%; }
	#mainwrap li { margin-bottom: 0.5em; list-style-position: outside; margin-left: 1em; }
	#mainwrap ul li { list-style-type: disc; }
	#mainwrap ol li { list-style-type: decimal; }

p { }
	.picslide p { font-size: 110%; }

/*  Layout styles
 *
 */

#logo {
	min-width: 700px;
	max-width: 1100px;

	margin: 0 auto;
	padding: 0 2em 0.5em 1.3em;
}

#logo a {
	margin-left: 2em;
	border-bottom: none;
}

#mainwrap {
	padding: 2em 2em;
	float: left;
}
	#main { margin-right: 295px; }
	#xubuntu.item-home #main { margin-top: -2em; margin-right: 465px; }

#sidebar {
	float: right;
	width: 260px;
	margin-left: -260px;
	padding-bottom: 2em;
}
#xubuntu.item-home #sidebar { width: 430px; margin-left: -430px; }

#latest-news { margin-top: 2em; }
#xubuntu.item-home .picslide { margin-top: 2.2em; }

#postnavi {
	clear: both;
	padding: 0.3em 0;
	font-size: 90%;
}

#wpfooter {
	clear: both;
	background-color: #e7e7e7;
	padding: 0.3em 0 1em 0;

	font-size: 80%;
	font-weight: bold;
	line-height: 1.3em;

	-webkit-border-bottom-left-radius: 5px;
	-webkit-border-bottom-right-radius: 5px;
	-moz-border-radius-bottomleft: 5px;
	-moz-border-radius-bottomright: 5px;
	border-bottom-left-radius: 5px;
	border-bottom-right-radius: 5px;
}
	#wpfooter #footer-widgets {
		padding: 0 2.5em;
	}
	#wpfooter .footer-widget {
		float: left;
		width: 18%;
		padding-right: 2%;
	}

/*  Menu with images
 *
 */

.gm-get-xubuntu { background-image: url(images/get-xubuntu.png); }
.gm-get-support { background-image: url(images/get-support.png); }
.gm-get-involved { background-image: url(images/get-involved.png); }

.gm-menu { background-repeat: no-repeat; }
.gm-menu a { border-bottom: none; }

#navi .gm-menu { background-position: 50% 0; }
#navi .gm-menu a { display: block; margin-top: -60px; padding-top: 60px; height: 20px; overflow: hidden; }

#sidebar .gm-menu { background-position: 0 50%; font-size: 180%; }
#sidebar .gm-menu a { display: table-cell; margin: 0; padding-left: 55px; width: 400px; height: 55px; vertical-align: middle; }

#wpfooter .gm-get-xubuntu { background-image: url(images/get-xubuntu-16.png); }
#wpfooter .gm-get-support { background-image: url(images/get-support-16.png); }
#wpfooter .gm-get-involved { background-image: url(images/get-involved-16.png); }

#wpfooter .gm-menu { background-position: 0 50%; }
#wpfooter .gm-menu a { display: table-cell; margin: 0; padding-left: 20px; height: 20px; vertical-align: middle; }

/*  Specific styles
 *
 */

a.header-image,
a.header-image:hover,
a.header-image:active,
a.header-image:focus {
	border: none;
}

.post-title { margin: 0 0 0.3em 0; }
.post-post { color: #333; margin: 1.5em 0; }
	#xubuntu.item-archive .post-post { margin-bottom: 3em; }

.post table {
	width: 100%;
}
.post table td {
	border: 1px solid #ccc;
	background-color: #f6f6f6;
	padding: 3px;
}
.post table th {
	text-align: left;
}

#sidebar ul#menu-main-menu {
	font-weight: bold;
}

.archive-message {
	margin-bottom: 2em;
}

.news {
	margin-bottom: 0.8em;
}

.news-meta {
	display: block;
	font-size: 60%;
	color: #999;
	line-height: 1.1em;
}

/*  Post and comment metadata
 *
 */

.post-meta, .post-meta a {
	color: #ccc;
	color: rgba(0,0,0,.2);
}

.comment-meta, .comment-meta a {
	color: #aaa;
	color: rgba(0,0,0,.5);
}

.comment-meta a {
	border-bottom: 1px solid #ddd;
	border-bottom: 1px solid rgba(0,0,0,.1);
}

.post-meta span a {
	-webkit-transition: all 0.5s ease-in-out;
	-moz-transition: all 0.5s ease-in-out;
	-o-transition: all 0.5s ease-in-out;
	transition: all 0.5s ease-in-out;
}
.post-meta span a:hover,
.post-meta span a:focus {
	color: #808080;
	color: rgba(0,0,0,.5);
}

/*  Comments
 *
 */

.wpcomments,
#respond {
	min-width: 435px;
	margin: 1.5em 0;
	padding-top: 0.5em;
	border-top: 1px solid #bbb;
}

#respond {
	margin-top: 3em;
}

#comments p {
	font-size: 10pt !important;
}

.comment-meta,
.comment-reply {
	font-size: 9.5pt !important;
}

.type-comment,
.type-pingback {
	margin-bottom: 1em;
	margin-top: 6px;
}

.comment-meta {
	display: block;
	margin: -4px 0 5px 0;
}

.avatar {
	margin: 0 3px -4px 0;
	-webkit-border-radius: 2px;
	-moz-border-radius: 2px;
	border-radius: 2px;
}

.comment-comment {
	color: #444;

	padding: 6px;

	background-color: #fdfdfd;

	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius: 5px;
}
	.comment-comment p {
		margin-bottom: 0.3em;
	}

#comments li ul {
	margin: 10pt 0 0 30pt;
}

#comments ul.children {
	margin-bottom: -8pt; 
}

#respond .comment-form-author input,
#respond .comment-form-email input,
#respond .comment-form-url input {
	width: 40%;
}

#respond .comment-form-author label,
#respond .comment-form-email label,
#respond .comment-form-url label {
	display: block;
	width: 55%;
	float: right;
	text-align: left;
}

#respond span.required {
	float: right;
	margin-right: 5px;
	font-size: 160%;
	margin-top: 0.2em;
	color: #3369bb;
	color: rgba(0,68,170,.8);
}

#respond .comment-notes span.required { float: none; }
#respond .comment-form-comment label { display: block; }
#respond textarea { width: 70%; }
#respond .form-allowed-tags { display: none; }

#comments li.pingback {
	font-size: 85%;
	line-height: 1.2em;
	padding-left: 1.7em;
}
#comments li.pingback .comment-from { font-weight: bold; }

